gitops/applications/apps/mlflow/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/part-of: mlops-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
