gitops/applications/apps/mlflow/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-server
  namespace: mlflow
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: mlflow-server
